# jobinfo-scraper

./: .gitignore  README.md  dockerfile  pyproject.toml
app/: main.py
app/api/: routes.py
app/core/: config.py
app/scraping/: config.py  scraper.py  urls.py
