[project]
name = "jobinform-scraper"
version = "0.1.0"
description = "this is scraper service for scrap job positions from persian crypto exchanges"
authors = [
    {name = "shayan vosoughi",email = "shayanwqhw@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "unicorn (>=2.1.1,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
